# jma-client

./: LICENSE  README.md  client.py  exceptions.py  response.py  setup.cfg
jma/: __init__.py  client.py  jmastation.py  response.py
test/: test_response.py
tests/: test_response.py
