[metadata]
name = jma-client
version = 0.0.1
author = Dan Liberatori
author_email = daniel.liberatori@gmail.com
description = Download data from Japanese Meteorological Association.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dliberat/jma-client
project_urls =
    Bug Tracker = https://github.com/dliberat/jma-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests